--- a/package.json
+++ b/package.json
@@ -20,13 +20,16 @@
     "@vitejs/plugin-vue": "^2.2.2",
     "@vue/eslint-config-prettier": "^7.0.0",
     "@vue/test-utils": "^2.0.0-rc.18",
+    "autoprefixer": "^10.4.4",
     "cypress": "^9.5.0",
     "eslint": "^8.5.0",
     "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-vue": "^8.2.0",
     "jsdom": "^19.0.0",
+    "postcss": "^8.4.12",
     "prettier": "^2.5.1",
     "start-server-and-test": "^1.14.0",
+    "tailwindcss": "^3.0.23",
     "vite": "^2.8.4",
     "vitest": "^0.5.0"
   }
