--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "pinia": "^2.0.11",
+    "vee-validate": "^4.5.10",
     "vue": "^3.2.31",
     "vue-router": "^4.0.12"
   },
@@ -31,6 +32,7 @@
     "start-server-and-test": "^1.14.0",
     "tailwindcss": "^3.0.23",
     "vite": "^2.8.4",
-    "vitest": "^0.5.0"
+    "vitest": "^0.5.0",
+    "yup": "^0.32.11"
   }
 }
