--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "@vueuse/head": "^0.7.7",
     "fuse.js": "^6.6.2",
     "pinia": "^2.0.11",
     "swiper": "^8.1.4",
